# clubs

./: CURRENT_STATUS.md  EXECUTIVE_SUMMARY.md  FILE_MANIFEST.txt  FINAL_PLATFORM_STATUS.md  FLASK_VS_DJANGO.md  FRONTEND_IMPROVEMENTS_SUMMARY.md  IMPLEMENTATION_STATUS.md  INDEX.md  MASTER_SUMMARY.md  MIGRATION_SUMMARY.md  MSU_PLATFORM_DOCUMENTATION.md  PHASE_6_COMPLETE.md  QUICK_TEST_REFERENCE.md  README.md  START_HERE_VERIFICATION.md  TESTING_GUIDE.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_SUITE_SUMMARY.md  VERIFICATION_CHECKLIST.md  VERIFICATION_COMPLETE.md  app.py  clubs.db  data_seed.py  db.sqlite3  init_db.py  pytest.ini  requirements-dev.txt  requirements.txt  todo.txt  verify_tests.py
msu_platform/: .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  API_DOCUMENTATION.md  BATCH_FILES_SUMMARY.md  CACHING_AND_INDEXING.md  CI_CD_GUIDE.md  COMPLETE_FEATURE_SUMMARY.md  COMPREHENSIVE_VERIFICATION_SUMMARY.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.dev  ENHANCED_FEATURES_GUIDE.md  ENHANCED_FEATURES_IMPLEMENTATION.md  ENHANCED_FEATURES_SUMMARY.md  ERROR_HANDLING_AND_CI_CD_SUMMARY.md  ERROR_HANDLING_GUIDE.md  FINAL_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_VERIFICATION.md  LAUNCH_GUIDE.md  MIGRATION_GUIDE.md  MSU_GWERU_SAMPLE_DATA.md  PHASE_5_COMPLETE.md  PHASE_7_COMPLETE.md  PHASE_8_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_START_COMPARISON.md  README.md  README_OLD.md  RLS_DOCUMENTATION.md  SESSION_SUMMARY.md  (+20 more)
msu_platform/.github/workflows/: ci.yml
msu_platform/apps/api/: dashboard_views.py  urls.py  views.py
msu_platform/apps/audit/: middleware.py  models.py  services.py
msu_platform/apps/audit/migrations/: 0001_initial.py
msu_platform/apps/core/: apps.py  authentication.py  cache_utils.py  email.py  exception_handlers.py  exceptions.py  middleware.py  signals.py  storage.py  storage_utils.py  throttling.py  validators.py
msu_platform/apps/core/middleware/: __init__.py  cache.py  error_logging.py
msu_platform/apps/core/tests/: test_cache.py  utils.py
msu_platform/apps/core/views/: __init__.py  (+1 more)
msu_platform/apps/organizations/: admin.py  feed_algorithm.py  models.py  query_optimizers.py  serializers.py  signals.py  tasks.py  urls.py
msu_platform/apps/permissions/: models.py  permissions.py  services.py
msu_platform/apps/users/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
msu_platform/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
msu_platform/config/settings/: base.py  development.py  production.py  test.py  testing.py
msu_platform/frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  STRUCTURE.md  check_imports.js  check_imports.py  index.html  package-lock.json  package.json  reproduce_500.py  tailwind.config.js  tsc_output.txt  tsconfig.app.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
msu_platform/frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  router.tsx
msu_platform/nginx/: nginx.conf
msu_platform/nginx/conf.d/: default.conf  msu_platform.conf
msu_platform/scripts/: check_dependencies.py  check_health.sh  deploy.sh  docker-entrypoint.sh  migrate_flask_data.py  run_tests.sh  seed_admin.py
msu_platform/templates/emails/: base.html  membership_approved.html  organization_approved.html  password_reset.html  verify_email.html  welcome.html
(+142 files in other folders)
